--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "firebase": "^12.4.0",
