--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "twilio": "^5.10.4"
   }
 }
