--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URL="mongodb+srv://tlhUser:headachelastthe@thelastheadache.zdp1org.mongodb.net/?appName=theLastHeadache"
-JWT_SECRET=avnaiiksehtnlaovvie
+MONGO_URL=
+JWT_SECRET=
 FIREBASE_SERVICE_ACCOUNT_PATH=
 TWOFACTOR_KEY=
